--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -8,3 +8,7 @@ build:
 # Build from the docs/ directory with Sphinx
 sphinx:
   configuration: doc/conf.py
+
+python:
+  install:
+    - requirements: doc/requirements.txt
