--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -32,7 +32,7 @@ repos:
         args:
           - "--max-line-length=88"
           - "--ignore=E203,E266,W503,B905,W605"
-          - "--max-complexity=10" # TODO: change back to 10
+          - "--max-complexity=10"
         exclude: ^(docs/.*|tests/.*)$
   - repo: https://github.com/pycqa/pydocstyle
     rev: 6.3.0
